# SPyCCI

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  api.html  apptainer.def  contributor-guide.html  environment.yml  genindex.html  getting-started.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  release-notes.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user-guide.html
.github/workflows/: ci.yml  docs-deploy.yml  publish-to-pypi.yml  publish-to-testpypi.yml  tests.yml
API/: core.html  functions.html  systems.html  tools.html  wrappers.html
API/wrappers/: crest.html  dftbplus.html  orca.html  packmol.html  xtb.html
Guide/: functions.html  molecular_visualization.html  run.html  setup.html  systems.html  tools.html
_sources/: contributor-guide.md  intro.md  release-notes.md  user-guide.md
_sources/API/: functions.md  systems.md
_sources/Guide/: functions.md  molecular_visualization.md  run.md  setup.md
_static/css/: custom.css
docs/: _config.yml  _toc.yml  api.md  contributor-guide.md  getting-started.md  intro.md  release-notes.md  user-guide.md
docs/API/: core.md  graphicaltools.md  systems.md  tools.md  wrappers.md
docs/Guide/: functions.md  molecular_geometry.md  molecular_visualization.md  properties.md  run.md  setup.md  systems.md  tools.md
docs/example_files/: acetaldehyde.json  generate_files.py  solvated_cube.json  water.json
spycci/: __init__.py  config.py  constants.py  systems.py
spycci/core/: decorators.py  dependency_finder.py  geometry.py  program_finder.py  (+1 more)
(+112 files in other folders)
