[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spycci-toolkit"
version = "0.0.2"
description = "Simple Python Computational Chemistry Interface"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.6",
    "pandas>=1.3.0",
    "sh>=2.2.2",
    "rdkit>=2025.3.3",
    "morfeus-ml>=0.7.2",
    "matplotlib>=3.10.3",
    "packaging>=23.1",
    "pyvista>=0.46.3",
]

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24"
]

[tool.flake8]
max-line-length = 160

[tool.setuptools.packages.find]
where = ["."]
include = ["spycci", "spycci.*"]

